[B]Retrospect v5.5.x - Changelog - 2022-xx-xx[/B]

tbd

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: NPO Subtitles (Fixes #1644).
* Fixed: Full listing of NPO.