@@ -11,3 +11,4 @@ _None_
 [B]Channel related[/B]
 * Fixed: NPO Subtitles (Fixes #1644).
 * Fixed: Full listing of NPO.
+* Fixed: Live Radio for NPO.
